# GNGS

./: claudius.typ  exploratory1.ipynb  main.py  pyproject.toml  pyrightconfig.json  requirements.txt  ruff.toml  sector_by_country_matrix.csv  sectors.txt  sorted_a.csv  value_added_analysis.py
exploratory/: chile_lithium_exports.py  full_eora.py
results/: co2_res.csv  co2_res_high_income.csv  co2_res_low_income.csv  co2_res_lower_middle_income.csv  co2_res_upper_middle_income.csv  dependency_shares_high_income.csv  dependency_shares_low_income.csv  dependency_shares_lower_middle_income.csv  dependency_shares_upper_middle_income.csv  ptts.csv  ptts_high_income.csv  ptts_low_income.csv  ptts_lower_middle_income.csv  ptts_upper_middle_income.csv  share_produced_by_gs.csv  share_produced_byhigh_income.csv  share_produced_bylow_income.csv  share_produced_bylower_middle_income.csv  share_produced_byupper_middle_income.csv
src/: country_classifier.py  data_generation.py  eora.py  eora_loader.py  extension.py  plotting.py  share_functions.py
src/exploratory/: co2_shares.py  dissagregate_car_sector.py  full_eora.py  ptt.py  value_added_analysis.py
tests/: test_eora.py
