[project]
name = "globalnorthglobalsouth"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "country-converter>=1.3",
    "geopandas>=1.1.1",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "pycountry>=24.6.1",
    "pymrio>=0.6.0",
    "seaborn>=0.13.2",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
